# poc-factory

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py
app/api/dependencies/: orchestrator.py
app/api/routes/: health.py  runs.py
app/api/schemas/: runs.py
app/application/orchestrators/: __init__.py  run_orchestrator.py
app/application/services/: claude_md_generator.py  markdown_generator.py  poc_ideation.py  prompt_loader.py  report_writer.py  validator.py
app/domain/models/: run.py
app/domain/policies/: __init__.py  generation_policy.py
app/domain/services/: poc_ranking.py
app/domain/value_objects/: slug.py
app/graph/: state.py
app/graph/edges/: poc_edges.py
app/graph/nodes/: poc_nodes.py  run_nodes.py
app/graph/poc_graph/: __init__.py  graph.py
app/graph/run_graph/: __init__.py  graph.py
app/infrastructure/claude_code/: __init__.py  runner.py
app/infrastructure/filesystem/: __init__.py  adapter.py
app/infrastructure/git/: __init__.py  adapter.py
app/infrastructure/llm/: __init__.py  adapter.py
app/infrastructure/observability/: __init__.py  langfuse_adapter.py
app/infrastructure/persistence/: __init__.py  database.py
app/infrastructure/subprocess/: __init__.py  runner.py
app/templates/claude_md/: poc_claude_md_generation_prompt.md
app/templates/markdown/: code_walkthrough_generation_prompt.md  poc_ideation_prompt.md  (+4 more)
app/tests/: conftest.py
scripts/: create_run.sh  run.sh  setup.sh  test.sh
work/: poc_factory.db
(+8 files in other folders)
