[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc-factory"
version = "0.1.0"
description = "Agentic POC Factory - generates focused POC repos from a topic phrase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "openai>=1.30.0",
    "langfuse>=2.20.0",
    "gitpython>=3.1.43",
    "aiosqlite>=0.20.0",
    "aiofiles>=23.2.1",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
